started to make everything output into a table. First row is complete.

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-*{
+/**{
   font-family: times;
   color: black;
   background-color: pink;
@@ -16,4 +16,7 @@
 h1{
   font-size: 50px;
   text-align: center;
+}*/
+td{
+  border: thin solid red;
 }
