--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
-/**{
+*{
   font-family: times;
   color: black;
-  background-color: pink;
+  background-color: salmon;
 }
 
 .highlight{
@@ -9,14 +9,20 @@
   color: blue;
 }
 
-.data{
+/*.data{
   font-family: Arial;
   color: green;
-}
+}*/
+
+
 h1{
   font-size: 50px;
   text-align: center;
-}*/
+  background-color: white;
+  margin-left: 20%;
+  margin-right: 20%;
+}
+
 td{
   border: thin solid red;
 }
