--- a/style.css
+++ b/style.css
@@ -27,6 +27,16 @@ td{
   border: thin solid red;
 }
 
+.pic1{
+  margin-left: 32%;
+  margin-bottom: 20px;
+}
+
+.top{
+  border: 5px solid white;
+  margin: 10px;
+}
+
 /* table rows don't contain my table data, so table data doesn't change color. I need to make some kind of function (like math function) to model selecting the even or odd rows but that seems like a bunch of work and I'm lazy. I can change the table data to look weird if you'd like.
 
 tr:nth-child(even){
