--- a/style.css
+++ b/style.css
@@ -10,12 +10,6 @@
   color: blue;
 }
 
-/*.data{
-  font-family: Arial;
-  color: green;
-}*/
-
-
 h1{
   font-size: 50px;
   text-align: center;
@@ -101,9 +95,7 @@ label{
   color: black;
 }
 
-/* table rows don't contain my table data, so table data doesn't change color. I need to make some kind of function (like math function) to model selecting the even or odd rows but that seems like a bunch of work and I'm lazy. I can change the table data to look weird if you'd like.
-
-tr:nth-child(even){
-  background-color: #DDD;
+.data{
+  font-family: Arial;
+  color: green;
 }
-*/
